--- a/src/assets/css/reset.less
+++ b/src/assets/css/reset.less
@@ -181,3 +181,47 @@ html,body,#app {
   margin:0;
   padding:0;
 }
+.backColor {
+  background: #f9f9f9;
+  width: 100%;
+  height: 100%;
+  .firstColor {
+    padding: 20px 20px 0 20px;
+    width: 100%;
+    display: flex;
+    flex-flow: row;
+  }
+  .twons {
+    padding: 20px;
+  }
+}
+.imgStyle {
+  position: absolute;
+  border-radius: 50%;
+  top: 10%;
+  left: 60%;
+  background: #ffffff;
+  box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.05);
+  opacity: 1;
+}
+.blue {
+  color: aqua;
+}
+.orange {
+  color: darkorange;
+}
+.blueqing {
+  color: blueviolet;
+}
+.green {
+  color: #39b54a;
+}
+.yellow {
+  color: #f29124;
+}
+.red {
+  color: #e6432d;
+}
+.white {
+  color: white;
+}
