--- a/src/assets/css/reset.less
+++ b/src/assets/css/reset.less
@@ -204,6 +204,14 @@ html,body,#app {
   box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.05);
   opacity: 1;
 }
+.imgStyles {
+  position: absolute;
+  top: 10%;
+  left: 60%;
+  background: #ffffff;
+  box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.05);
+  opacity: 1;
+}
 .blue {
   color: aqua;
 }
