--- a/src/assets/css/reset.less
+++ b/src/assets/css/reset.less
@@ -256,3 +256,18 @@ html,body,#app {
   height: 178px;
   display: block;
 }
+.contentLift {
+  text-align: left;
+  padding: 20px;
+  .divText {
+    width: 65px;
+    display: inline-block;
+    font-size: 9px;
+    line-height: 36px;
+  }
+}
+.stylecss {
+  margin-left: -19px;
+  margin-top: -8px;
+  position: absolute;
+}
