--- a/src/assets/css/reset.less
+++ b/src/assets/css/reset.less
@@ -271,3 +271,11 @@ html,body,#app {
   margin-top: -8px;
   position: absolute;
 }
+.postDyex {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+.postDyexer {
+  padding: 0 5px;
+}
