--- a/src/assets/css/reset.less
+++ b/src/assets/css/reset.less
@@ -1,200 +1,278 @@
-div, span, object, iframe,
+div,
+span,
+object,
+iframe,
 
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
 
-abbr, address, cite, code,
+abbr,
+address,
+cite,
+code,
 
-del, dfn, em, img, ins, kbd, q, samp,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+samp,
 
-small, strong, sub, sup, var,
+small,
+strong,
+sub,
+sup,
+var,
 
-b, i,
+b,
+i,
 
-dl, dt, dd, ol, ul, li,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
 
-fieldset, form, label, legend,
+fieldset,
+form,
+label,
+legend,
 
-table, caption, tbody, tfoot, thead, tr, th, td,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
 
-article, aside, canvas, details, figcaption, figure,
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
 
-footer, header, hgroup, menu, nav, section, summary,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section,
+summary,
 
-time, mark, audio, video {
+time,
+mark,
+audio,
+video {
 
-margin:0;
+  margin: 0;
 
-padding:0;
+  padding: 0;
 
-border:0;
+  border: 0;
 
-outline:0;
+  outline: 0;
 
-font-size:100%;
+  font-size: 100%;
 
-vertical-align:baseline;
+  vertical-align: baseline;
 
-background:transparent;
+  background: transparent;
 
-box-sizing:border-box;
+  box-sizing: border-box;
 
 }
 
 body {
 
-line-height:1;
+  line-height: 1;
 
 }
 
 :focus {
 
-outline: 1;
+  outline: 1;
 
 }
 
-article,aside,canvas,details,figcaption,figure,
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
 
-footer,header,hgroup,menu,nav,section,summary {
+footer,
+header,
+hgroup,
+menu,
+nav,
+section,
+summary {
 
-display:block;
+  display: block;
 
 }
 
 ul {
 
-list-style:none;
+  list-style: none;
 
 }
 
-blockquote, q {
+blockquote,
+q {
 
-quotes:none;
+  quotes: none;
 
 }
 
-blockquote:before, blockquote:after,
+blockquote:before,
+blockquote:after,
 
-q:before, q:after {
+q:before,
+q:after {
 
-content:'';
+  content: '';
 
-content:none;
+  content: none;
 
 }
 
 a {
 
-margin:0;
+  margin: 0;
 
-padding:0;
+  padding: 0;
 
-border:0;
+  border: 0;
 
-font-size:100%;
+  font-size: 100%;
 
-vertical-align:baseline;
+  vertical-align: baseline;
 
-background:transparent;
+  background: transparent;
 
 }
 
 ins {
 
-background-color:#ff9;
+  background-color: #ff9;
 
-color:#000;
+  color: #000;
 
-text-decoration:none;
+  text-decoration: none;
 
 }
 
 mark {
 
-background-color:#ff9;
+  background-color: #ff9;
 
-color:#000;
+  color: #000;
 
-font-style:italic;
+  font-style: italic;
 
-font-weight:bold;
+  font-weight: bold;
 
 }
 
 del {
 
-text-decoration: line-through;
+  text-decoration: line-through;
 
 }
 
-abbr[title], dfn[title] {
+abbr[title],
+dfn[title] {
 
-border-bottom:1px dotted #000;
+  border-bottom: 1px dotted #000;
 
-cursor:help;
+  cursor: help;
 
 }
 
 table {
 
-border-collapse:collapse;
+  border-collapse: collapse;
 
-border-spacing:0;
+  border-spacing: 0;
 
 }
 
 hr {
 
-display:block;
+  display: block;
 
-height:1px;
+  height: 1px;
 
-border:0;
+  border: 0;
 
-border-top:1px solid #cccccc;
+  border-top: 1px solid #cccccc;
 
-margin:1em 0;
+  margin: 1em 0;
 
-padding:0;
+  padding: 0;
 
 }
 
-input, select {
+input,
+select {
 
-vertical-align:middle;
+  vertical-align: middle;
 
 }
 
 #nprigress {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 9999;
-    width: 100% !important;
-  }
-  #nprigress .bar {
-    height: 5px !important;
-    background-color: blue;
-  }
-
-html,body,#app {
-  height: 100%;
-  margin:0;
-  padding:0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100% !important;
 }
+
+#nprigress .bar {
+  height: 5px !important;
+  background-color: blue;
+}
+
+html,
+body,
+#app {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 .backColor {
   background: #f9f9f9;
   width: 100%;
   height: 100%;
+
   .firstColor {
     padding: 20px 20px 0 20px;
     width: 100%;
     display: flex;
     flex-flow: row;
   }
+
   .twons {
     padding: 20px;
   }
 }
+
 .imgStyle {
   position: absolute;
   border-radius: 50%;
@@ -204,6 +282,7 @@ html,body,#app {
   box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.05);
   opacity: 1;
 }
+
 .imgStyles {
   position: absolute;
   top: 10%;
@@ -212,27 +291,35 @@ html,body,#app {
   box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.05);
   opacity: 1;
 }
+
 .blue {
   color: aqua;
 }
+
 .orange {
   color: darkorange;
 }
+
 .blueqing {
   color: blueviolet;
 }
+
 .green {
   color: #39b54a;
 }
+
 .yellow {
   color: #f29124;
 }
+
 .red {
   color: #e6432d;
 }
+
 .white {
   color: white;
 }
+
 .avatar-uploader .el-upload {
   border: 1px dashed #d9d9d9;
   border-radius: 6px;
@@ -240,9 +327,11 @@ html,body,#app {
   position: relative;
   overflow: hidden;
 }
+
 .avatar-uploader .el-upload:hover {
   border-color: #409EFF;
 }
+
 .avatar-uploader-icon {
   font-size: 28px;
   color: #8c939d;
@@ -251,14 +340,17 @@ html,body,#app {
   line-height: 178px;
   text-align: center;
 }
+
 .avatar {
   width: 178px;
   height: 178px;
   display: block;
 }
+
 .contentLift {
   text-align: left;
   padding: 20px;
+
   .divText {
     width: 65px;
     display: inline-block;
@@ -266,16 +358,23 @@ html,body,#app {
     line-height: 36px;
   }
 }
+
 .stylecss {
   margin-left: -19px;
   margin-top: -8px;
   position: absolute;
 }
+
 .postDyex {
   display: flex;
   justify-content: center;
   align-items: flex-end;
 }
+
 .postDyexer {
   padding: 0 5px;
+}
+
+.clickHeader {
+  cursor: pointer;
 }
