--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,107 +1,109 @@
-.vue3-icon-picker{
-  cursor: pointer;
-  /* font-size:30px; */
+.vue3-icon-picker {
+	cursor: pointer;
+	/* font-size:30px; */
 }
 
 button.select-icon {
-    padding: 20px;
-    border-radius: 5px;
-    background-color: #70b2dc;
-    font-size: 22px;
-    cursor: pointer;
+	padding: 20px;
+	border-radius: 5px;
+	background-color: #70b2dc;
+	font-size: 22px;
+	cursor: pointer;
 }
 
 .icon-picker-wrap ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: inline-flex;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	display: inline-flex;
 }
 
 .icon-picker-wrap ul li {
-    border: 2px solid #ddd;
-    line-height: 1;
-    font-size: 20px;
-    cursor: pointer;
-    padding: 5px;
+	border: 2px solid #ddd;
+	line-height: 1;
+	font-size: 20px;
+	cursor: pointer;
+	padding: 5px;
 }
 
 .icon-picker-wrap ul li i {
-    font-size: 68px;
-    line-height: 1;
-    margin: 0;
+	font-size: 68px;
+	line-height: 1;
+	margin: 0;
 }
 
 .icon-picker-wrap ul li:nth-child(2) {
-    border-left: 0;
+	border-left: 0;
 }
 
 /*
  */
- .aim-close{
+.aim-close {
 	opacity: 0;
 	visibility: hidden;
 	transition: all 0.4s ease-in-out;
 }
 
-.aim-open{
+.aim-open {
 	opacity: 1;
 	visibility: visible;
 	transition: all 0.4s ease-in-out;
 }
- .aim-modal {
+
+.aim-modal {
 	position: fixed;
 	height: 100%;
 	width: 100%;
 	bottom: 0;
-    left: 0;
+	left: 0;
 	background-color: rgba(0, 0, 0, 0.6);
 	z-index: 9999;
 	user-select: none;
 	display: flex;
-    align-items: center;
+	align-items: center;
 }
 
- .aim-modal .aim-modal--content {
+.aim-modal .aim-modal--content {
 	position: absolute;
 	border-radius: 3px;
 	box-shadow: 2px 8px 23px 3px rgba(0, 0, 0, 0.2);
 	overflow: hidden;
 	font-family: Roboto, Arial, Helvetica, Verdana, sans-serif;
 	background-color: #f1f3f5;
-    width: 100%;
-    margin: auto;
-    left: 0;
-    right: 0;
+	width: 100%;
+	margin: auto;
+	left: 0;
+	right: 0;
 }
 
 
 /* Header */
 .aim-modal .aim-modal--header {
 	padding: 15px 15px;
-    background-color: #fff;
-    box-shadow: 0 0 8px rgb(0 0 0 / 10%);
-    position: relative;
-    z-index: 1;
-    font-size: 15px;
-    color: #495157;
-    font-weight: 500;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+	background-color: #fff;
+	box-shadow: 0 0 8px rgb(0 0 0 / 10%);
+	position: relative;
+	z-index: 1;
+	font-size: 15px;
+	color: #495157;
+	font-weight: 500;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .aim-modal--header-logo-title {
-    padding-top: 2px;
-    line-height: 1;
-    text-transform: uppercase;
-    font-weight: bold;
-    cursor: pointer;
+	padding-top: 2px;
+	line-height: 1;
+	text-transform: uppercase;
+	font-weight: bold;
+	cursor: pointer;
 }
 
 .aim-modal--header-close-btn {
 	cursor: pointer;
 }
+
 .aim-modal--header-close-btn i {
 	font-size: 22px;
 }
@@ -109,27 +111,29 @@ button.select-icon {
 /* body */
 .aim-modal--body {
 	font-size: 12px;
-    line-height: 1.5;
-    box-sizing: border-box;
-    padding: 0;
-    height: 700px;
-    display: flex;
-    min-height: 50px;
-    max-height: 85vh;
-    overflow: auto;
+	line-height: 1.5;
+	box-sizing: border-box;
+	padding: 0;
+	height: 700px;
+	display: flex;
+	min-height: 50px;
+	max-height: 85vh;
+	overflow: auto;
 }
 
 
 /* Sidebar Tabs */
 .aim-modal--sidebar {
-    -ms-flex-negative: 0;
-    flex-shrink: 0;
-    width: 25%;
-    background-color: hsla(0,0%,100%,.3);
+	-ms-flex-negative: 0;
+	flex-shrink: 0;
+	width: 25%;
+	background-color: hsla(0, 0%, 100%, .3);
 }
+
 .aim-modal--sidebar-tabs {
 	margin-top: 30px;
 }
+
 .aim-modal--sidebar-tab-item {
 	padding: 15px 0 15px 45px;
 	font-size: 14px;
@@ -141,6 +145,7 @@ button.select-icon {
 	align-items: center;
 	text-transform: capitalize;
 }
+
 .aim-modal--sidebar-tab-item i {
 	font-size: 20px;
 	padding-right: 15px;
@@ -152,6 +157,7 @@ button.select-icon {
 	-webkit-box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.1);
 	box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.1);
 }
+
 .aim-modal--sidebar-tab-item.aesthetic-active:after {
 	content: "";
 	position: absolute;
@@ -161,6 +167,7 @@ button.select-icon {
 	left: 0;
 	background-color: #71d7f7;
 }
+
 .aim-modal--sidebar-tab-item.aesthetic-active i {
 	color: #71d7f7;
 }
@@ -180,10 +187,11 @@ button.select-icon {
 	padding: 30px 80px 0;
 	width: 75%;
 }
-.aim-modal--icon-preview-inner{
+
+.aim-modal--icon-preview-inner {
 	overflow: auto;
-    margin: 25px -15px 0;
-    padding: 0 15px 15px;
+	margin: 25px -15px 0;
+	padding: 0 15px 15px;
 }
 
 .aim-modal--icon-preview {
@@ -198,24 +206,30 @@ button.select-icon {
 .aim-modal--icon-search {
 	position: relative;
 }
+
 .aim-modal--icon-search input {
-	width: calc( 100% - 30px);
+	width: calc(100% - 30px);
 	padding: 8px 15px;
 	background-color: #fff;
 	border: none;
 }
+
 .aim-modal--icon-search input::-webkit-input-placeholder {
 	font-style: italic;
 }
+
 .aim-modal--icon-search input::-moz-placeholder {
 	font-style: italic;
 }
+
 .aim-modal--icon-search input::-ms-input-placeholder {
 	font-style: italic;
 }
+
 .aim-modal--icon-search input::placeholder {
 	font-style: italic;
 }
+
 .aim-modal--icon-search i {
 	position: absolute;
 	top: 50%;
@@ -240,14 +254,17 @@ button.select-icon {
 	transition: all 0.3s;
 	overflow: hidden;
 }
+
 .aim-icon-item:hover {
 	-webkit-box-shadow: 0 1px 14px rgba(0, 0, 0, 0.16);
 	box-shadow: 0 1px 14px rgba(0, 0, 0, 0.16);
 }
+
 .aim-icon-item.aesthetic-selected {
 	-webkit-box-shadow: 0 1px 12px rgba(0, 0, 0, 0.05), 0 0 0 3px #71d7f7;
 	box-shadow: 0 1px 12px rgba(0, 0, 0, 0.05), 0 0 0 3px #71d7f7;
 }
+
 .aim-icon-item-inner {
 	display: -webkit-box;
 	display: -ms-flexbox;
@@ -261,11 +278,13 @@ button.select-icon {
 	align-items: center;
 	padding: 1px;
 }
+
 .aim-icon-item-inner i,
 .aim-icon-item__icon {
 	font-size: 25px;
 	color: #6d7882;
 }
+
 .aim-icon-item-name {
 	color: #c2cbd2;
 	font-size: 11px;
@@ -296,50 +315,52 @@ button.select-icon {
 }
 
 .aim-modal--footer button.aim-insert-icon-button {
-    padding: 10px 35px;
-    color: #fff;
-    font-size: 15px;
-    background-color: #39b54a;
-    border: none;
-    cursor: pointer;
-    outline: 0;
+	padding: 10px 35px;
+	color: #fff;
+	font-size: 15px;
+	background-color: #39b54a;
+	border: none;
+	cursor: pointer;
+	outline: 0;
 }
 
 .aim-modal .aim-modal--footer .aesthetic-button {
 	height: 40px;
 	margin-left: 5px;
 }
+
 .aim-modal .aim-modal--footer .aesthetic-button-success {
 	padding: 12px 36px;
 	color: #fff;
 	width: initial;
 	font-size: 15px;
 }
+
 .aim-modal .aim-modal--footer .aesthetic-button-success:hover {
 	background-color: #39b54a;
 }
 
 /* preview sidebar */
 .aim-sidebar-preview {
-  position: absolute;
-  bottom: 50px;
-  width: 300px;
+	position: absolute;
+	bottom: 50px;
+	width: 300px;
 }
 
 .aim-sidebar-preview .aim-icon-item {
-  height: 200px;
+	height: 200px;
 }
 
 .aim-sidebar-preview .aim-icon-item-inner i {
-  padding-top: 10px;
-  font-size: 120px;
+	padding-top: 10px;
+	font-size: 120px;
 }
 
 .aim-sidebar-preview .aim-icon-item-name {
-  padding-top: 20px;
-  font-size: 20px;
-  color: #444;
-  text-transform: lowercase;
+	padding-top: 20px;
+	font-size: 20px;
+	color: #444;
+	text-transform: lowercase;
 }
 
 
@@ -350,55 +371,66 @@ button.select-icon {
 		max-width: 990px;
 	}
 }
+
 @media (min-width: 1440px) {
 	.aim-modal .aim-modal--content {
 		max-width: 1200px;
 	}
 }
+
 @media (max-width: 1439px) {
 	.aim-modal--icon-preview-wrap {
 		padding: 30px 50px 0;
 	}
 }
+
 @media (max-width: 479px) {
 	.aim-modal--icon-preview-wrap {
 		width: 100%;
 	}
 }
+
 @media (max-width: 1439px) {
 	.aim-modal--icon-preview {
 		grid-template-columns: repeat(6, 1fr);
 	}
 }
+
 @media (max-width: 1024px) {
 	.aim-modal--icon-preview {
 		grid-template-columns: repeat(5, 1fr);
 	}
 }
+
 @media (max-width: 767px) {
 	.aim-modal--icon-preview {
 		grid-template-columns: repeat(4, 1fr);
 	}
 }
+
 @media (max-width: 479px) {
 	.aim-modal--icon-preview {
 		grid-template-columns: repeat(3, 1fr);
 	}
 }
+
 @media (max-width: 479px) {
 	.aim-modal--sidebar {
 		display: none;
 	}
 }
+
 @media (max-width: 1439px) {
 	.aim-modal--sidebar-tab-item {
 		padding: 15px 15px 15px 25px;
 		font-size: 11px;
 	}
+
 	.aim-modal--sidebar-tab-item i {
 		font-size: 15px;
 	}
 }
+
 @media (max-width: 1024px) {
 	.aim-modal--sidebar-tab-item i {
 		display: none;
