--- a/src/assets/css/reset.less
+++ b/src/assets/css/reset.less
@@ -291,6 +291,13 @@ body,
   box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.05);
   opacity: 1;
 }
+.imgStyleser {
+  position: absolute;
+  top: 10%;
+  left: 20%;
+  background: #ffffff;
+  box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.05);
+}
 
 .blue {
   color: aqua;
